--- a/Sentimental Analysis on User Emotions 1.0.ipynb
+++ b/Sentimental Analysis on User Emotions 1.0.ipynb
@@ -6,7 +6,7 @@
       "name": "Jigeesha.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPrsSqDC0g+9ckym5IsS5zX",
+      "authorship_tag": "ABX9TyMlTwTlCPMk+NhgZZC7HcvT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -729,6 +729,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wC-2GsTk7cUX"
+      },
+      "source": [
+        "### **2.2 Sentimental Analysis**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "DP02gGnE1-Cf",
@@ -771,6 +780,24 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "okwTDn-c7hWG"
+      },
+      "source": [
+        "## **The End**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pTwAP1IH7hNn"
+      },
+      "source": [
+        ""
       ]
     },
     {
